Fixed Panel Layout overflow issues

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -60,25 +60,48 @@
         color: var(--cs-yellow);
     }
     hr{
+        border: 0;
         border-bottom: 1px solid var(--cs-light-border);
         border-top: 1px solid var(--cs-dark-border);
+        
     }
     .logo-horizontal {
         position: absolute;
         bottom: 0;
         padding-left: 2rem;
         padding-bottom: 1.5rem;
-        z-index: 0;
+        z-index: 1;
     }
     .navigation{
         position: absolute;
         padding-left: 2rem;
         bottom: 7.5rem;
-        z-index: 1;
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
         text-align: left;
+    }
+    .panel{
+        position: relative;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content:center;
+        align-items: center;
+        z-index: 20;
+    }
+    .about-view{
+        display: flex;
+        position: relative;
+        flex-direction: column;
+        padding: 0.25rem;
+        height: 80%;
+        width: 50%;
+        border-top: 1px solid var(--cs-light-border);
+        border-left: 1px solid var(--cs-light-border);
+        border-bottom: 1px solid var(--cs-dark-border);
+        border-right: 1px solid var(--cs-dark-border);
+        background-color: var(--cs-green);
     }
     .menu-icon{
         margin-top: 0.25rem;
@@ -98,16 +121,20 @@
     .menu-active{
         color: var(--cs-yellow);
     }
-    @media (min-width: 641px) {
-        span.icon {display:none}
-        span.text {display:inline-block}
-    }
-    
-    @media (max-width: 640px) {
+    span.icon {display:none}
+    span.text {display:inline-block}
+    @media screen and (max-width: 640px) {
+        .about-view{
+            height: 80%;
+            width: 80%;
+        }
         span.icon {display:inline-block}
         span.text {display:none}
-    }
-    @media screen and (max-width: 640px) {
+        .panel{
+            padding-top: 2rem;
+            max-width: 100%;
+            max-height: 95%;
+        }
         .menu-active{
             transition: ease-in-out 0.5s;
             transform: translateY(-30%);
@@ -115,7 +142,7 @@
             border-radius: 1rem;
         }
         .menu-out-transition{
-            transition: ease-out 0.5s;
+            transition: ease-in-out 0.5s;
         }
         .navigation a{
             flex: 1;
@@ -139,6 +166,7 @@
             align-items: start;
             display: grid;
             top: 0;
+            height: fit-content;
         }
     }
     .h-screen {
